fix 2: product are now aligned to the left

--- a/src/sass/layout/_category.scss
+++ b/src/sass/layout/_category.scss
@@ -9,6 +9,6 @@
     gap: 1.5rem;
     grid-template-columns: repeat(auto-fit, minmax(350px, max-content));
     justify-items: center;
-    justify-content: center;
+    justify-content: start;
   }
 }
